@@ -167,7 +167,7 @@ HP ProCurve 3400cl Series    |    XX    |    --    |    XX    |    ??    |   ?? 
 -----------------------------|----------|----------|----------|----------|--------|
 HP ProCurve 4100 Series      |    XX    |    --    |    XX    |    ??    |   ??   |
 -----------------------------|----------|----------|----------|----------|--------|
-HP ProCurve 5400 Series      |    XX    |    --    |    XX    |    ??    |   ??   |
+HP ProCurve 5400 Series      |    XX    |    --    |    XX    |    XX    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
 Intel Express 460            |    XX    |    --    |    --    |    --    |   --   |
 -----------------------------|----------|----------|----------|----------|--------|
